# databricks-sqlalchemy

./: CHANGELOG.md  CONTRIBUTING.md  README.md  README.tests.md  example.py  pyproject.toml  sqlalchemy_example.py  test_full_audit.py
.github/: CODEOWNERS
.github/actions/setup-jfrog/: action.yml
.github/actions/setup-poetry/: action.yml
.github/workflows/: code-quality-checks.yml  dco-check.yml  integration.yml  publish-test.yml  publish.yml
databricks/sqlalchemy/: __init__.py  base.py
dependency_test/: test_dependency.py
src/databricks/sqlalchemy/: __init__.py  _ddl.py  _types.py  base.py
src/databricks/sqlalchemy/dialect/: __init__.py
src/databricks_sqlalchemy/: _types.py  base.py
src/databricks_sqlalchemy/test/: _unsupported.py
tests/dependency_test/: test_dependency.py
tests/e2e/test_compliance/: conftest.py
tests/test_local/: test_ddl.py  test_do_ping.py  test_is_disconnect.py  test_parsing.py  test_ping.py  test_types.py
tests/test_local/e2e/: test_basic.py  test_complex_types.py  test_setup.py
